<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hospitalinventory="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_save"
        android:icon="@drawable/ic_menu_save"
        hospitalinventory:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_save"
        android:orderInCategory="1"
        />
    <item android:id="@+id/menu_revert"
        android:icon="@drawable/ic_menu_revert"
        hospitalinventory:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_revert"
        android:orderInCategory="2"
        />
    <item android:id="@+id/menu_assign"
        android:icon="@drawable/ic_menu_assign_task"
        hospitalinventory:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_assign_task"
        android:orderInCategory="3"
        />
    <item android:id="@+id/menu_done"
        android:icon="@drawable/ic_menu_task_done"
        hospitalinventory:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_mark_as_complete"
        android:orderInCategory="4"
        />
    <item android:id="@+id/menu_call"
        android:icon="@drawable/ic_menu_call"
        hospitalinventory:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_call_assigned_person"
        android:orderInCategory="5"
        />
</menu>