<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        >
        <TextView
                android:id="@+id/textItemType"
                android:text="@string/item"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/textItemName"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        >
        <TextView
            android:text="@string/type"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/textTaskType"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        >
        <TextView
            android:text="@string/assigned_to"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/textAssignedTo"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        >
        <TextView
            android:text="@string/due_date"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/textDueDate"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        >
        <TextView
            android:text="@string/priority"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/textPriority"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />
    </TableRow>

</TableLayout>