<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style='"@android:style/Theme.Dialog"'>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/instrument"
            android:textColor="#ff707070"
            android:textSize="16sp" />
        <Space
            android:layout_width="20px"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/textInstrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff222222"
            android:textSize="16sp"
            android:numeric="integer" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/description"
            android:textColor="#ff707070"
            android:textSize="16sp" />
        <Space
            android:layout_width="20px"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/textDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Please describe the problem..."
            android:inputType="textMultiLine|textAutoCorrect"
            android:textColor="#ff222222"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnReport"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/report" />
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>