<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@android:style/Theme.Dialog"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        >
        <TextView
            android:text="New Contract Valid Till"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />
        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btnContractValidTillDate"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/set_date"
            android:background="@drawable/button_shape"
            android:textColor="#ffffff"
            />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip"
            >
            <TextView
                android:text="@string/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />
            <EditText
                android:id="@+id/textCompletionComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect|textAutoComplete"
                android:minWidth="250sp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/btnTaskDone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task_done" />
    </LinearLayout>

</LinearLayout>